force-app/main/default/objects/Campaign/fields/Project_Support_Type__c.field-meta.xml
<CustomField>
    <fullName>Project_Support_Type__c</fullName>
    <label>Project Support Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Project_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BIA Capital</fullName>
            </value>
            <value>
                <fullName>BIA Development</fullName>
            </value>
            <value>
                <fullName>BIA Capacity Building</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>