force-app/main/default/objects/Campaign/fields/Project_Type__c.field-meta.xml
<CustomField>
    <fullName>Project_Type__c</fullName>
    <label>Project Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General Projects</fullName>
            </value>
            <value>
                <fullName>Project Support (BIA)</fullName>
            </value>
            <value>
                <fullName>International Project</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>