force-app/main/default/objects/Campaign/fields/Purchased_Leased_Space_Sq_Ft__c.field-meta.xml
<CustomField>
    <fullName>Purchased_Leased_Space_Sq_Ft__c</fullName>
    <description>This is the square footage of the purchased/leased space.</description>
    <inlineHelpText>This is the square footage of the purchased/leased space.</inlineHelpText>
    <label>Purchased/Leased Space Sq. Ft.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>