force-app/main/default/objects/Campaign/fields/Purchased_Leased_Space_Value__c.field-meta.xml
<CustomField>
    <fullName>Purchased_Leased_Space_Value__c</fullName>
    <description>This is the value of the purchase or leased space</description>
    <inlineHelpText>This is the value of the purchase or leased space</inlineHelpText>
    <label>Purchased/Leased Space Value ($)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>