force-app/main/default/objects/Campaign/fields/Retained_Space_Sq_Ft__c.field-meta.xml
<CustomField>
    <fullName>Retained_Space_Sq_Ft__c</fullName>
    <description>This is the square footage that is retained</description>
    <inlineHelpText>This is the square footage that is retained</inlineHelpText>
    <label>Retained Space Sq.Ft</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>