force-app/main/default/objects/Campaign/fields/Source_of_Fund_2__c.field-meta.xml
<CustomField>
    <fullName>Source_of_Fund_2__c</fullName>
    <label>Source of Fund -2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>