force-app/main/default/objects/Campaign/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <description>The name of the street where the Investment property is located</description>
    <inlineHelpText>The name of the street where the Investment property is located</inlineHelpText>
    <label>Street</label>
    <length>50</length>
    <type>Text</type>
</CustomField>