force-app/main/default/objects/Campaign/fields/Total_Investment_Sq_Ft__c.field-meta.xml
<CustomField>
    <fullName>Total_Investment_Sq_Ft__c</fullName>
    <description>This is the sum of the Retained space, Purchased/Leased and the New Construction/Addition of the square footage</description>
    <formula>New_Construction_Addition_Sq_Ft__c + Purchased_Leased_Space_Sq_Ft__c  +  Retained_Space_Sq_Ft__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the sum of the Retained space, Purchased/Leased and the New Construction/Addition of the square footage</inlineHelpText>
    <label>Total Investment Sq. Ft.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>