force-app/main/default/objects/Campaign/fields/Total_Investment_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Investment_Value__c</fullName>
    <description>This is the sum of the New Contruction/Addition value, the Capital Investment value and the Purchased/leased space value.</description>
    <formula>New_Construction_Addition_Value__c +  Capital_Investment_Value__c +  Purchased_Leased_Space_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the sum of the New Contruction/Addition value, the Capital Investment value and the Purchased/leased space value.</inlineHelpText>
    <label>Total Investment  Value ($)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>