force-app/main/default/objects/Campaign/fields/Total_Jobs__c.field-meta.xml
<CustomField>
    <fullName>Total_Jobs__c</fullName>
    <formula>IF(OR(Jobs_New__c&gt;0,Jobs_Retained__c&gt;0),Jobs_New__c +  Jobs_Retained__c,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Jobs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>