force-app/main/default/objects/Campaign/fields/Type_of_Building__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Building__c</fullName>
    <description>This is to identify if the building is New or Existing.</description>
    <inlineHelpText>This is to identify if the building is New or Existing.</inlineHelpText>
    <label>Type of Building</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Building</fullName>
            </value>
            <value>
                <fullName>Existing Building</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>