force-app/main/default/objects/Campaign/fields/Type_of_Company__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Company__c</fullName>
    <description>This is to identify if this is a new company or a retained company.</description>
    <inlineHelpText>This is to identify if this is a new company or a retained company.</inlineHelpText>
    <label>Type of Company</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Existing Company (Retained)</fullName>
            </value>
            <value>
                <fullName>New Company</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>