force-app/main/default/objects/Campaign/fields/Type_of_Expansion__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Expansion__c</fullName>
    <description>This is the type of expansion being undertaken.</description>
    <inlineHelpText>This is the type of expansion being undertaken.</inlineHelpText>
    <label>Type of Expansion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On Site</fullName>
            </value>
            <value>
                <fullName>Add Location</fullName>
            </value>
            <value>
                <fullName>New Location</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>