force-app/main/default/objects/Campaign/fields/Type_of_Relocation__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Relocation__c</fullName>
    <description>This is to identify if this is a new business that is moving into the city or a new business opening up in the city.</description>
    <inlineHelpText>This is to identify if this is a new business that is moving into the city or a new business opening up in the city.</inlineHelpText>
    <label>Type of Relocation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>International (FDI)</fullName>
            </value>
            <value>
                <fullName>Within Canada</fullName>
            </value>
            <value>
                <fullName>Within Toronto</fullName>
            </value>
            <value>
                <fullName>From outside City</fullName>
                <isActive>false</isActive>
                <label>From outside City</label>
            </value>
            <value>
                <fullName>Within City</fullName>
                <isActive>false</isActive>
                <label>Within City</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>