force-app/main/default/objects/Campaign/recordTypes/Events.recordType-meta.xml
<RecordType>
    <fullName>Events</fullName>
    <active>true</active>
    <description>For tracking work on external event projects where the City is providing support in organizing.</description>
    <label>Events</label>
</RecordType>