force-app/main/default/objects/Campaign/recordTypes/Group_Management.recordType-meta.xml
<RecordType>
    <fullName>Group_Management</fullName>
    <active>true</active>
    <description>Groups associated with economic development projects, including advisory bodies and stakeholders.</description>
    <label>Group Management</label>
</RecordType>