force-app/main/default/objects/Campaign/recordTypes/Investment_Activity.recordType-meta.xml
<RecordType>
    <fullName>Investment_Activity</fullName>
    <active>true</active>
    <description>Project of Investment Activity type</description>
    <label>Investment Activity</label>
</RecordType>