force-app/main/default/objects/Campaign/recordTypes/Projects.recordType-meta.xml
<RecordType>
    <fullName>Projects</fullName>
    <active>true</active>
    <description>Projects that are being developed and implemented to support the business community.</description>
    <label>Projects</label>
</RecordType>