force-app/main/default/objects/Campaign/validationRules/External_Revenue_Source_Mnadatory.validationRule-meta.xml
<ValidationRule>
    <fullName>External_Revenue_Source_Mnadatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Actual_External_Revenue__c &gt;0,ISBLANK(External_Revenue_Source__c))</errorConditionFormula>
    <errorMessage>External Revenue Source field cannot be blank.</errorMessage>
</ValidationRule>