force-app/main/default/objects/Campaign/validationRules/Initiative_Postal_Code_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Initiative_Postal_Code_Validation</fullName>
    <active>true</active>
    <description>This Validation rule will check  that Postal code should be in correct format.</description>
    <errorConditionFormula>AND(RecordType.DeveloperName =&#39;Investment_Activity&#39;,
NOT(REGEX(Postal_Code__c, &quot;((?i)[ABCEGHJKLMNPRSTVXY]\\d[A-Z]?\\s?\\d[A-Z]\\d)?&quot;)) 
)</errorConditionFormula>
    <errorDisplayField>Postal_Code__c</errorDisplayField>
    <errorMessage>Please Enter Valid Postal Code</errorMessage>
</ValidationRule>