force-app/main/default/objects/Campaign/listViews/All_Investment_Activity.listView-meta.xml
<ListView>
    <fullName>All_Investment_Activity</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>Legacy_Investment_Record_Id__c</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>Account__c</columns>
    <columns>Investment_Type__c</columns>
    <columns>IMIT_Status__c</columns>
    <columns>Type_of_Building__c</columns>
    <columns>Type_of_Company__c</columns>
    <columns>Type_of_Expansion__c</columns>
    <columns>Type_of_Relocation__c</columns>
    <columns>CAMPAIGN.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Campaign.Investment_Activity</value>
    </filters>
    <label>All Investment Activity</label>
</ListView>