force-app/main/default/objects/Campaign/listViews/BGS_Projects_2018_CompletedProjects.listView-meta.xml
<ListView>
    <fullName>BGS_Projects_2018_CompletedProjects</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.RECORDTYPE</columns>
    <columns>Business_Group__c</columns>
    <columns>Project_Type__c</columns>
    <columns>General_Project_Type__c</columns>
    <columns>Group_Management_Type__c</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Campaign.Projects,Campaign.Group_Management</value>
    </filters>
    <filters>
        <field>CAMPAIGN.STATUS</field>
        <operation>equals</operation>
        <value>Completed,Aborted</value>
    </filters>
    <filters>
        <field>CAMPAIGN.END_DATE</field>
        <operation>equals</operation>
        <value>THIS_YEAR</value>
    </filters>
    <filters>
        <field>Group_Management_Type__c</field>
        <operation>notEqual</operation>
        <value>Distribution List (Informal)</value>
    </filters>
    <label>BGS - 2018 Completed Projects</label>
</ListView>