force-app/main/default/objects/Campaign/listViews/BGS_Projects_Active.listView-meta.xml
<ListView>
    <fullName>BGS_Projects_Active</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>Business_Group__c</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.NUM_CONTACTS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Campaign.Projects</value>
    </filters>
    <filters>
        <field>CAMPAIGN.STATUS</field>
        <operation>equals</operation>
        <value>In Progress</value>
    </filters>
    <label>BGS - Active Projects</label>
</ListView>