force-app/main/default/objects/Campaign/listViews/Entrepreneurship_Services.listView-meta.xml
<ListView>
    <fullName>Entrepreneurship_Services</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>Project_Focus__c</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.NAME</field>
        <operation>contains</operation>
        <value>BGS-ES</value>
    </filters>
    <label>Entrepreneurship Services</label>
    <sharedTo>
        <role>ES_Admin</role>
        <role>ES_BIC</role>
        <role>ES_DMS</role>
        <role>ES_ET</role>
    </sharedTo>
</ListView>