force-app/main/default/objects/Campaign/listViews/ET_Events_Unactive2017.listView-meta.xml
<ListView>
    <fullName>ET_Events_Unactive2017</fullName>
    <columns>PARENT_NAME</columns>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.NUM_CONTACTS</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.ACTIVE</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>CAMPAIGN.CAMPAIGN_TYPE</field>
        <operation>equals</operation>
        <value>Network Event (ET),Training (DMS),Training (ET),Training Workshop</value>
    </filters>
    <filters>
        <field>CAMPAIGN.END_DATE</field>
        <operation>lessThan</operation>
        <value>12/31/2017</value>
    </filters>
    <filters>
        <field>CAMPAIGN.END_DATE</field>
        <operation>greaterThan</operation>
        <value>12/31/2016</value>
    </filters>
    <label>ET-Events-Unactive-2017</label>
    <sharedTo>
        <roleAndSubordinates>EDC_Admin</roleAndSubordinates>
        <roleAndSubordinates>ES_Admin</roleAndSubordinates>
        <roleAndSubordinates>ES_ET</roleAndSubordinates>
    </sharedTo>
</ListView>